--- a/invite-friends.html
+++ b/invite-friends.html
@@ -13,7 +13,7 @@
 
     <div class="frens-invite">
         <div class="frens-invite-button">
-            <input type="text" value="https://t.me/cat coinclon_bot" id="link" readonly>
+            <input type="text" value="https://t.me/catcoin111111_bot" id="link" readonly>
             <button id="copyButton">Copy Link</button>
         </div>
     </div>
